# audio_forwarder

./: .gitignore  Cargo.toml  Justfile  README.md  build.rs  coverage.json  version.json5
.zed/: debug.json
benches/: benchmarks.rs
proto/: messages.proto
scripts/: audio-forwarder.service  service-deploy.sh  service-install.sh
src/: audio_caps.rs  client.rs  device_config.rs  lib.rs  messages.rs  prost_codec.rs  server.rs  stream_config.rs  udp_server.rs
testbins/tone_test_client/: Cargo.toml
testbins/tone_test_client/src/: main.rs
