[package]
name = "audio_forwarder"
version = "0.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@escapegallery.net>"]
description = "Audio forwarding service"
repository = "https://github.com/jlyonsmith/audio_forwarder"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive", "env"] }
clap-num = "1.2.0"
dasp_sample = "0.11.0"
lazy_static = "1.5"
termion = "4.0.5"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
cpal = "0.16.0"

[dev-dependencies]

[[bin]]
name = "audio-forwarder"
path = "src/bin/audio_forwarder.rs"
