[package]
name = "audio_forwarder"
version = "1.1.0"
edition = "2021"
authors = ["John Lyon-Smith <john@escapegallery.net>"]
description = "Audio forwarding service"
repository = "https://github.com/jlyonsmith/audio_forwarder"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive", "env"] }
clap-num = "1.2.0"
dasp_sample = "0.11.0"
lazy_static = "1.5"
thiserror = "2.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
cpal = "0.16.0"
env_logger = "0.11.8"
log = "0.4.27"
futures = "0.3.31"
flume = "0.11.1"
metrics = { version = "0.24.2" }
metrics-exporter-tcp = { version = "0.11.1" }
prost = "0.14.1"
bytes = "1.11.0"

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]

[[bin]]
name = "audio-forwarder"
path = "src/bin/audio_forwarder.rs"
